--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,16 @@ jdk:
 
 env:
   matrix:
-    - DATA=Ingalls-BUILD-SNAPSHOT
-    - BOOT=1.5.7.BUILD-SNAPSHOT
-    - BOOT=1.5.7.BUILD-SNAPSHOT DATA=Ingalls-BUILD-SNAPSHOT
-    - PROFILE=spring5
+    - DUMMY=run-as-is
+    - PROFILE=spring-data-next
+    - PROFILE=spring-data-next-releasetrain
+    - PROFILE=spring-data-next-releasetrain-released
+    - PROFILE=hibernate-53
+    - BOOT=2.0.0.BUILD-SNAPSHOT
+    - BOOT=2.0.0.BUILD-SNAPSHOT PROFILE=spring-data-next
+    - BOOT=2.0.0.BUILD-SNAPSHOT PROFILE=spring-data-next-releasetrain
+    - BOOT=2.0.0.BUILD-SNAPSHOT PROFILE=spring-data-next-releasetrain-released
+    - BOOT=2.0.0.BUILD-SNAPSHOT PROFILE=hibernate-53
 
 addons:
   apt:
