--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,17 @@ env:
     - PROFILE=spring-data-next-releasetrain
     - PROFILE=spring-data-next-releasetrain-released
     - PROFILE=hibernate-53
+    - PROFILE=spring-data-next,hibernate-53
+    - PROFILE=spring-data-next-releasetrain,hibernate-53
+    - PROFILE=spring-data-next-releasetrain-released,hibernate-53
     - BOOT=2.0.0.BUILD-SNAPSHOT
     - BOOT=2.0.0.BUILD-SNAPSHOT PROFILE=spring-data-next
     - BOOT=2.0.0.BUILD-SNAPSHOT PROFILE=spring-data-next-releasetrain
     - BOOT=2.0.0.BUILD-SNAPSHOT PROFILE=spring-data-next-releasetrain-released
     - BOOT=2.0.0.BUILD-SNAPSHOT PROFILE=hibernate-53
+    - BOOT=2.0.0.BUILD-SNAPSHOT PROFILE=spring-data-next,hibernate-53
+    - BOOT=2.0.0.BUILD-SNAPSHOT PROFILE=spring-data-next-releasetrain,hibernate-53
+    - BOOT=2.0.0.BUILD-SNAPSHOT PROFILE=spring-data-next-releasetrain-released,hibernate-53
 
 addons:
   apt:
