Use custom settings XML.
Remove repo.apache.org in contrast to settings.xml provided by TravisCI to avoid HTTP timeouts as they happen to occur quite often with Apache Maven repos.

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,12 +40,9 @@ cache:
 
 sudo: false
 
-before_install:
-  - sed -i.bak -e 's|https://nexus.codehaus.org/snapshots/|https://oss.sonatype.org/content/repositories/codehaus-snapshots/|g' ~/.m2/settings.xml
-
-
 install: true
 
 script:
  - git clone https://github.com/spring-projects/spring-data-examples.git
+ - cp -f settings.xml $HOME/.m2/settings.xml
  - ./run.sh
